Fix bug on the collapse and expand.

--- a/src/Resume_Website/static/styles/base_nav.css
+++ b/src/Resume_Website/static/styles/base_nav.css
@@ -230,6 +230,9 @@ h1{
     body {
         font-size: .9rem;
     }
+    #ul-nav{
+        visibility: visible;
+    }
 }
 
 @media (max-width:480px) {
